# lotus

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE
graphics/: CMakeLists.txt
graphics/include/lotus/graphics/: commands.h  common.h  context.h  descriptors.h  device.h  pipeline.h  resources.h
graphics/src/graphics/: common.cpp
graphics/src/graphics/backends/directx12/: commands.cpp  context.cpp  details.cpp  device.cpp  frame_buffer.cpp
lotus/av1/: CMakeLists.txt
lotus/av1/include/lotus/av1/: block_decoding.h  cdf.h  cdf_context.h  common.h  decoder.h  enums.h  functions.h  obu.h  quantizer_matrix.h  reader.h  state.h  symbol_decoder.h  tables.h
lotus/av1/src/av1/: block_decoding.cpp  cdf.cpp  decoder.cpp  functions.cpp  reader.cpp  symbol_decoder.cpp
lotus/core/: CMakeLists.txt
lotus/core/include/lotus/: color.h  common.h  compiler.h  enums.h  index.h  logging.h  memory.h  profiler.h  types.h
lotus/core/include/lotus/algorithms/: convex_hull.h
lotus/core/include/lotus/containers/: intrusive_linked_list.h  maybe_uninitialized.h  pool.h  pooled_hash_table.h  short_vector.h  static_optional.h
lotus/core/include/lotus/math/: aab.h  constants.h  matrix.h  numeric_traits.h  quaternion.h  sequences.h  tangent_frame.h  vector.h
lotus/core/include/lotus/memory/: block.h  common.h  managed_allocator.h  stack_allocator.h
lotus/core/include/lotus/utils/: camera.h  custom_float.h  dds.h  event_closure.h  index.h  misc.h  stack_allocator.h  static_function.h  strings.h
lotus/core/src/: logging.cpp  memory.cpp  profiler.cpp
lotus/core/src/algorithms/: convex_hull.cpp
lotus/core/src/containers/: short_vector.natvis
lotus/core/src/math/: matrix.natvis
lotus/core/src/math/auto_diff/: expression.cpp
lotus/core/src/memory/: common.cpp  stack_allocator.cpp
lotus/core/src/utils/: misc.cpp  stack_allocator.cpp
lotus/gpu/: CMakeLists.txt
lotus/gpu/include/lotus/gpu/: acceleration_structure.h  commands.h  common.h  context.h  descriptors.h  device.h  frame_buffer.h  pipeline.h  resources.h  synchronization.h
lotus/gpu/src/gpu/: common.cpp
lotus/graphics/: CMakeLists.txt
lotus/graphics/include/lotus/graphics/: acceleration_structure.h  commands.h  common.h  context.h  descriptors.h  device.h  frame_buffer.h  pass.h  pipeline.h  resources.h  synchronization.h
lotus/graphics/src/graphics/: common.cpp
lotus/physics/: CMakeLists.txt
lotus/physics/include/lotus/collision/: common.h  contact.h  shape.h
lotus/physics/include/lotus/physics/: body.h  body_properties.h  common.h  engine.h  world.h
lotus/physics/src/collision/: common.cpp  contact.cpp
lotus/physics/src/collision/algorithms/: contact_manifold.cpp  epa.cpp  gjk.cpp  gjk_epa.cpp  sat.cpp
lotus/physics/src/collision/shapes/: convex_polyhedron.cpp  polyhedron.cpp
lotus/physics/src/physics/: body.cpp  engine.cpp  world.cpp
lotus/physics/src/physics/avbd/: solver.cpp
lotus/physics/src/physics/rigid_body/: solver.cpp
lotus/physics/src/physics/sequential_impulse/: solver.cpp
lotus/physics/src/physics/xpbd/: solver.cpp
lotus/renderer/: CMakeLists.txt
lotus/renderer/include/lotus/renderer/: asset_manager.h  assets.h  caching.h  common.h  context.h  dear_imgui.h  debug_drawing.h  execution.h  g_buffer.h  generic_pbr_material.h  gltf_loader.h  mipmap.h  resource_bindings.h  resources.h  shader_types.h  shader_types_impl.h  shader_types_include_wrapper.h  surface.h
lotus/renderer/src/renderer/: asset_manager.cpp  caching.cpp  context.cpp  execution.cpp  g_buffer.cpp  generic_pbr_material.cpp  gltf_loader.cpp  mipmap.cpp  resource_bindings.cpp  resources.cpp
lotus/renderer/src/renderer/context/: asset_manager.cpp  caching.cpp  constant_uploader.cpp  context.cpp  execution.cpp  resource_bindings.cpp  resources.cpp
lotus/renderer/src/renderer/loaders/: assimp_loader.cpp  dds_loader.cpp  fbx_loader.cpp  gltf_loader.cpp
lotus/system/: CMakeLists.txt
lotus/system/include/lotus/system/: application.h  common.h  dear_imgui.h  dialog.h  identifier.h  window.h
test/renderer/: CMakeLists.txt  common.h  composite.hlsl  composite_pass.h  gbuffer.hlsl  gbuffer_pass.h  main.cpp  raytrace_pass.h  scene.h  test.hlsl
test/renderer/common/include/: camera_control.h  lotus.h  scene.h
test/renderer/common/include/common_shaders/: rt.hlsli  types.hlsli
test/renderer/path_tracer/: CMakeLists.txt
test/renderer/path_tracer/src/: main.cpp
test/renderer/path_tracer/src/shaders/: composite.hlsl  gbuffer.hlsl  misc.hlsl  pcg32.hlsl  raytracing.hlsl  rt_resolve.hlsl  types.hlsli
test/renderer/restir_probes/: CMakeLists.txt
test/renderer/restir_probes/src/: main.cpp
test/renderer/restir_probes/src/shaders/: combine_lighting_ps.hlsl  direct_reservoirs.hlsl  fill_buffer.hlsl  fill_texture3d.hlsl  gbuffer_visualization.hlsl  (+14 more)
test/renderer/shaders/: brdf.hlsl  misc.hlsl  pcg32.hlsl  raytracing.hlsl  rt_resolve.hlsl
test/renderer/src/: common.h  composite_pass.h  gbuffer_pass.h  main.cpp  raytrace_pass.h  rt_resolve_pass.h  scene.h
test/renderer/src/shaders/: misc.hlsl  raytracing.hlsl  rt_resolve.hlsl  types.hlsli
test/testbed/: CMakeLists.txt  physics_test.h  test.h  testbed.cpp  utils.cpp  utils.h
test/testbed/shaders/: default_shader.hlsl  gbuffer_shader.hlsl  light_quad.hlsl  line_shader.hlsl  point_shader.hlsl  shader_types.hlsli  shadow.hlsl  shadow_quad.hlsl  sky.hlsl  ssao.hlsl
test/testbed/tests/: angular_momentum_test.h  box_stack_test.h  car_test.h  cloth_test.h  convex_hull_test.h  cosserat_rod_test.h  fem_cloth_test.h  friction_test.h  hinge_test.h  pin_test.h  polyhedron_test.h  shallow_water_test.h  spring_cloth_test.h  spring_test.h  test.h
tools/shadertoy/: CMakeLists.txt
tools/shadertoy/shaders/: blit.hlsl  vertex.hlsl
tools/shadertoy/src/: common.h  main.cpp  pass.cpp  pass.h  project.cpp  project.h
tools/shadertoy/test/brdf/: gbuffer.hlsl  project.json  scene.hlsl
tools/shadertoy/test/jump_flood/: fill.hlsl  final.hlsl  project.json  scene.hlsl
tools/shadertoy/test/test_project/: common.hlsl  lighting.hlsl  project.json  shadow.hlsl
(+329 files in other folders)
